# FitchCheney

./: .gitignore  CMakeLists.txt  FitchCheney.cpp  FitchCheney.h  README.md  main.cpp
comb/: CMakeLists.txt  choices.cpp  combinations.cpp  combinatorics.h  permutations.cpp  test_combinatorics.cpp
combinatorics/: CMakeLists.txt  combinatorics.h  factoradic.cpp  io.cpp  permutations.cpp  test_combinatorics.cpp  test_factoradic.cpp
main/: CMakeLists.txt  main.cpp
